--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@types/express": "^4.17.17",
     "@types/node": "^18.14.5",
     "nodemon": "^2.0.21",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^4.6.2",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
   }
