--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node dist/app.js",
+    "prestart": "node ./swagger.ts",
     "dev": "nodemon src/app.ts",
     "build": "tsc -p ."
   },
@@ -12,7 +13,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "swagger-autogen": "^2.23.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
