--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node dist/app.js",
-    "prestart": "node ./swagger.ts",
+    "prestart": "node src/swagger.ts",
     "dev": "nodemon src/app.ts",
     "build": "tsc -p ."
   },
