--- a/package.json
+++ b/package.json
@@ -14,12 +14,13 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
+    "pug": "^3.0.2",
     "swagger-autogen": "^2.23.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/node": "^18.14.5",
-    "nodemon": "^2.0.21",
+    "nodemon": "^1.14.9",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^4.6.2",
     "ts-node": "^10.9.1",
