--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/node": "^18.14.5",
+    "@types/swagger-ui-express": "^4.1.3",
     "nodemon": "^1.14.9",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^4.6.2",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
-  }
+  },
+  "type":"commonjs"
 }
