--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
+    "node-fetch": "^2.6.12",
     "pug": "^3.0.2",
     "swagger-autogen": "^2.23.1"
   },
@@ -27,5 +28,5 @@
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
   },
-  "type":"commonjs"
+  "type": "module"
 }
