--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/node": "^18.14.5",
+    "@types/pug": "^2.0.6",
     "@types/swagger-ui-express": "^4.1.3",
     "nodemon": "^1.14.9",
     "swagger-jsdoc": "^6.2.8",
